changes and additions
