# app.js
@@ -7,7 +7,52 @@ const port = process.env.PORT || 8080;
 const app = express();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
+const {auth,requiresAuth} = require('express-openid-connect');
+require('dotenv').config();
 
+
+//Define the openID connect configuration
+
+const config = {
+ authRequired: false,
+ auth0Logout: true,
+ secret:process.env.SECRET,
+ baseURL: process.env.BASE_URL,
+ clientID: process.env.CLIENT_ID,
+ issuerBaseURL: process.env.ISSUER_BASE_URL 
+}
+
+//Attach the authentication middleware
+app.use(auth(config));
+
+//Define the root route to check if the user is authenticated
+app.get('/', (req, res) => {
+  res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out')
+});
+
+//Define the profile route, which requires authentication
+
+app.get('/profile', requiresAuth(), (req, res) => {
+  res.send(JSON.stringify(req.oidc.user));
+});
+
+// Define routes for the users collection, which requires authentication
+app.use('/users', requiresAuth(), require('./routes/user'));
+
+
+// Define routes for the users collection, which requires authentication
+app.use('/workouts', requiresAuth(), require('./routes/workout'));
+
+
+// Define routes for the users collection, which requires authentication
+app.use('/progress', requiresAuth(), require('./routes/progress'))
+
+
+// Define routes for the users collection, which requires authentication
+app.use('/achievements', requiresAuth(), require('./routes/achievement'))
+
+
+// Setup CORS and content headers
 app
 .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
   .use(bodyParser.json())
@@ -22,11 +67,14 @@ app
   })
   .use('/', require('./routes'));
 
+
 //Handle uncaught exceptions and errors
 process.on('uncaughtException', (err, origin) => {
   console.log(process.stderr.fd, `Caught exception: ${err}\n` + `Exception origin: ${origin}`);
 });
 
+
+// Initialize mongoDB connection
 mongodb.initDb((err) => {
   if (err) {
     console.log(err);
